# rdk

./: README.md
functionkeys/: ChangeLog  Makefile.am  Makefile.in  OnScrDsp.cpp  OnScrDsp.h  autogen.sh  button.h  cmpc_pm.h  configure  configure.ac  fnkey.cpp
functionkeys/data/: camera.conf  cmpcfk-control.sh  fnkey-start.sh  fnkey.sh  wlan.conf  wlan.sh
functionkeys/data/deb/: control  postinst  postrm  prerm
functionkeys/data/debug/: close_wifi.sh  open_wifi.sh
rdk-drivers/: Makefile
rdk-drivers/accel/: Makefile  accel.c  accelio.h
rdk-drivers/acld/: Makefile  accelio.h  acld.c
rdk-drivers/iscm/: Makefile  iscm.c
rdk-drivers/pm/: Makefile  cmpc_pm.c  cmpc_pm.h
rdk-drivers/tablet/: Makefile  tablet.c
rdk-drivers/vkd/: Makefile  cmpc_vkd.c  cmpc_vkd.h
sensord/: Makefile  sensord.c  sensord.cpp
sensord/conf/: sensord_start.sh
sensord/debpackage/DEBIAN/: control  postinst  postrm
sensord/include/: AngleSensor.h  accel_ioctl.h  dbusdef.h  globaldef.h  tablet_ioctl.h
sensord/sensors/: Makefile
sensord/sensors/accel/: Makefile  accel_ioctl.c
sensord/sensors/acld/: Makefile  acld_ioctl.c
sensord/sensors/tablet/: Makefile  tablet_ioctl.c
